# franka_panda

./: CMakeLists.txt  MUJOCO_LOG.TXT  README.md  frankaEnv.py  package.xml  random_test.py  reward.py  simulate.py  train.py
include/: controller.h  trajectory.h
model/: panda.xml
model/meshes/: panda.urdf
rviz/: urdf.rviz
src/: controller.cpp  robotmodel.cpp  simulate.cpp
